<resources>
    <string name="app_name">Word Bank</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Quiz</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">DARK MODE</string>
    <string name="menu_share">Backup And Restore</string>
    <string name="menu_send">Backup Nad Restore</string>
    <string name="title_activity_backup_restore">Backup and Restore Words</string>
    <string name="Ok">Ok</string>
    <string name="File">File</string>
    <string name="restore">Restore .json</string>
    <string name="restore1">Restore .html</string>
    <string name="Backup">Backup</string>


    <string name="question">Question</string>
    <string name="next_questions">Next Question</string>
    <string name="previous_questions">Previous Question</string>
    <string name="btn_display">Display</string>
    <string name="Score">Score</string>
    <string name="exit">Exit</string>
    <string name="title_activity_addpage">Add Word</string>
    <string name="title_activity_word_details">Details</string>
    <string name="title_quiz">Quiz</string>
    <string name="darkmode">Dark Mode</string>
    <string name="yes">Enable Dark Mode?</string>
    <string name="no">Disable Dark Mode ?</string>
    <string name="greet">Hi. How are you?</string>
    <string name="subscribe">Subscribe</string>
    <string name="title_activity_news">News Lists</string>
    <string name="news">News</string>
    <string name="title_add_news">Save News</string>
    <string name="title_activity_news_details">news_details</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="update_news">Update News</string>
    <string name="pdf">Save as PDF</string>
    <string name="music">Music</string>
    <string name="music_play">Music Player</string>

    <string name="cd_repeat">Repeat one or all</string>
    <string name="cd_previous">Skip backwards</string>
    <string name="cd_play">Play and pause</string>
    <string name="cd_next">Skip forwards</string>
    <string name="static_shortcut_disabled_message">ok</string>
    <string name="shortcut_long_label">Start a quiz to check your skills.</string>
    <string name="shortcut_short_label">Quick quiz!</string>
    <string name="shortcut_long_label1">Start a quiz to check your skills.</string>
    <string name="shortcut_short_label1">Add Word!</string>
    <string name="menu_back">News Backup and Restore</string>
    <string name="title_activity_news_backup">Backup and Restore News</string>
    <string name="Time">Time Remaining :</string>
    <string name="result">Quiz result</string>
    <string name="Promotodo">Promotodo</string>
    <string name="promotodo">Promotodo</string>
    <string name="extended_fab_content_desc">OK</string>
    <string name="extended_fab_label">Ok</string>
    <string name="Confirm">Quiz Confirm</string>
    <string name="oll">Deadline</string>
    <string name="Quizmatch">Quiz Match</string>
    <string name="end">Finish</string>
    <string name="deletethis">Confirm to delete.</string>
    <string name="nn">Confirmation.</string>
    <string name="copy">Copy</string>
    <string name="Highlight">Highlight</string>
    <string name="HighlightAll">Highlight All</string>
    <string name="SelectionMode">Selection Mode</string>
    <string name="UnSelectionMode">Close Selection Mode</string>
    <string name="menu_pro">Promotodo Backup/Restore</string>
    <string name="title_activity_backup_pro">promotodo Backup Restore</string>
    <string name="menu_daily">Daily Backup</string>
    <string name="done">Save</string>
    <string name="image">Add Image</string>
    <string name="title_activity_word_detail">WordDetail</string>
    <string name="tab_text_1">Meaning</string>
    <string name="tab_text_2">Sentences</string>
    <string name="title_activity_daily">Daily Details</string>
    <string name="action_daily">Daily Report</string>
    <string name="Walk">Walk Through</string>
    <string name="menu_dailyreport">Daily Report</string>
</resources>
