<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_copy"
        android:title="@string/copy"></item>
    <item
        android:id="@+id/action_paste"
        android:title="@string/Highlight"></item>
    <item
        android:id="@+id/action_all"
        android:title="@string/HighlightAll"></item>
    <item
        android:id="@+id/action_select"
        android:title="@string/SelectionMode"></item>
    <item
        android:id="@+id/action_unselect"
        android:title="@string/UnSelectionMode"></item>
    <item
        android:id="@+id/action_done"
        android:title="@string/done"></item>

    <item
        android:id="@+id/action_image"
        android:title="@string/image"></item>

</menu>
