<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_content_paste_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/menu_tools" />

        <item
            android:id="@+id/subscription"
            android:icon="@drawable/ic_notifications_active_black_24dp"
            android:title="@string/subscribe" />


    </group>

    <item android:title="DATA">
        <menu>
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_settings_backup_restore_black"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/news"
                android:icon="@drawable/ic_notifications_active_black_24dp"
                android:title="@string/news" />

            <item
                android:id="@+id/music"
                android:icon="@drawable/ic_library_music_black_24dp"
                android:title="@string/music" />
        </menu>
    </item>

</menu>
