<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.BackupAndRestore.backup_restore"
    tools:showIn="@layout/activity_backup_restore">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >






        <com.google.android.material.button.MaterialButton
            android:id="@+id/backup"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="280dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/cardview_light_background"
            android:text="@string/Backup"
            android:textSize="12dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/restore"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="210dp"

            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/cardview_light_background"
            android:text="@string/restore"
            android:textSize="12dp"/>



        <EditText
            android:id="@+id/retext"
            android:layout_width="400dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="50dp"

            android:hint="@string/File">


        </EditText>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/click"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="100dp"
            android:paddingLeft="15dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/cardview_light_background"
            android:text="@string/Ok"
            android:textSize="10dp" />






    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>