<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:id="@+id/relative_quiz">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>


    <TextView

        android:id="@+id/quiz_question"

        android:layout_width="373dp"

        android:layout_height="54dp"

        android:layout_alignParentLeft="true"

        android:layout_alignParentStart="true"

        android:layout_alignParentTop="true"

        android:layout_marginEnd="10dp"

        android:layout_marginLeft="13dp"

        android:layout_marginRight="10dp"

        android:layout_marginStart="13dp"
        android:layout_marginTop="85dp"

        android:paddingLeft="@dimen/padd"

        android:text="@string/question"

        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"


        android:textStyle="bold|italic" />

    <ScrollView
        android:layout_width="370dp"
        android:layout_height="400dp"
        android:id="@+id/scrollButtons"
        android:layout_below="@+id/quiz_question"
        android:background="@drawable/backgroundborder"

        android:layout_alignLeft="@+id/quiz_question"

        android:layout_alignStart="@+id/quiz_question"
        android:layout_marginTop="20dp"
        android:paddingLeft="5dp">

        <RadioGroup

            android:layout_width="360dp"

            android:layout_height="wrap_content"

            android:paddingTop="5dp"


            android:id="@+id/radioGroup">






            <RadioButton

                android:layout_height="wrap_content"

                android:layout_width="match_parent"

                android:id="@+id/radio0"
                android:background="@drawable/backgroundborder"

                android:textSize="15sp"

                android:textColor="@color/colorPrimaryDark"

                android:text="@string/app_name"

                android:layout_marginBottom="10dp"
                android:paddingTop="@dimen/padd"
                android:paddingBottom="@dimen/padd"

                android:paddingLeft="20dp"
                android:button="@drawable/radio_btn"
                />



            <RadioButton

                android:layout_height="wrap_content"

                android:layout_width="match_parent"

                android:id="@+id/radio1"

                android:textSize="15sp"
                android:background="@drawable/backgroundborder"
                android:textColor="@color/colorPrimaryDark"

                android:text="@string/app_name"

                android:layout_marginBottom="10dp"
                android:paddingTop="@dimen/padd"
                android:paddingBottom="@dimen/padd"

                android:paddingLeft="20dp"
                android:button="@drawable/radio_btn"
                />

            <RadioButton

                android:layout_height="wrap_content"

                android:layout_width="match_parent"
                android:background="@drawable/backgroundborder"
                android:id="@+id/radio2"

                android:textSize="15sp"

                android:textColor="@color/colorPrimaryDark"

                android:text="@string/app_name"

                android:layout_marginBottom="10dp"
                android:paddingTop="@dimen/padd"
                android:paddingBottom="@dimen/padd"

                android:paddingLeft="20dp"
                android:button="@drawable/radio_btn"

                />

            <RadioButton

                android:layout_height="wrap_content"

                android:layout_width="match_parent"

                android:id="@+id/radio3"
                android:background="@drawable/backgroundborder"
                android:textSize="15sp"

                android:textColor="@color/colorPrimaryDark"
                android:paddingTop="@dimen/padd"
                android:paddingBottom="@dimen/padd"

                android:text="@string/app_name"

                android:paddingLeft="20dp"
                android:button="@drawable/radio_btn"
                />





        </RadioGroup>
    </ScrollView>




    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnDisplay"
        android:layout_width="132dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/scrollButtons"
        android:layout_marginEnd="64dp"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="12dp"
        android:layout_toStartOf="@+id/nextquiz"
        android:paddingBottom="10dp"
        android:paddingLeft="30dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:text="@string/btn_display"
        android:textColor="@color/cardview_light_background" />


    <com.google.android.material.button.MaterialButton

        android:id="@+id/nextquiz"

        android:layout_width="159dp"

        android:layout_height="62dp"

        android:layout_alignParentRight="true"
        android:layout_below="@+id/scrollButtons"

        android:layout_marginRight="26dp"

        android:layout_marginTop="13dp"
        android:gravity="center"

        android:padding="5dp"

        android:paddingBottom="10dp"

        android:paddingLeft="10dp"
        android:paddingRight="10dp"

        android:paddingTop="10dp"
        android:text="@string/next_questions"
        android:textColor="@color/cardview_light_background" />

    <TextView
        android:id="@+id/scores"
        android:layout_width="352dp"
        android:layout_height="64dp"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="100dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="5dp"

        android:layout_marginTop="652dp"

        android:background="@drawable/backgroundborder"
        android:paddingLeft="10dp"

        android:paddingTop="8dp"

        android:text="@string/Score"
        android:textColor="@color/cardview_dark_background"
        android:textSize="20dp" />

</RelativeLayout>